--- a/.github/workflows/build-brew-formula.yml
+++ b/.github/workflows/build-brew-formula.yml
@@ -93,6 +93,11 @@ jobs:
           merge-multiple: false
           path: tarballs
 
+      - name: Copy formula to root for release
+        run: |
+          cp build/Formula/safechain-agent.rb safechain-agent.rb
+          echo "Formula file copied to root as safechain-agent.rb"
+
       - name: Create GitHub Release
         if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/')
         uses: softprops/action-gh-release@v1
@@ -100,13 +105,26 @@ jobs:
           files: |
             tarballs/tarball-amd64/safechain-agent-${{ needs.extract-version.outputs.version }}-darwin-amd64.tar.gz
             tarballs/tarball-arm64/safechain-agent-${{ needs.extract-version.outputs.version }}-darwin-arm64.tar.gz
+            safechain-agent.rb
           body: |
             ## safechain-agent ${{ needs.extract-version.outputs.version }}
             
             ### Installation
             
+            Download the formula file from this release and install:
+            
             ```bash
-            brew install --build-from-source build/Formula/safechain-agent.rb
+            # Download the formula file
+            curl -L -O https://github.com/${{ github.repository }}/releases/download/v${{ needs.extract-version.outputs.version }}/safechain-agent.rb
+            
+            # Install
+            brew install --build-from-source ./safechain-agent.rb
+            ```
+            
+            Or install directly from the release:
+            
+            ```bash
+            brew install --build-from-source https://github.com/${{ github.repository }}/releases/download/v${{ needs.extract-version.outputs.version }}/safechain-agent.rb
             ```
             
             ### Checksums
@@ -121,7 +139,7 @@ jobs:
       - name: Upload updated formula
         uses: actions/upload-artifact@v4
         with:
-          name: homebrew-formula
+          name: safechain-agent.rb
           path: build/Formula/safechain-agent.rb
           retention-days: 30
 
