--- a/.github/workflows/build-agent.yml
+++ b/.github/workflows/build-agent.yml
@@ -84,14 +84,14 @@ jobs:
 
       - name: Save checksum to file
         run: |
-          echo "${{ steps.checksum.outputs.sha }}" > checksum-${{ matrix.arch }}.txt
-          echo "${{ matrix.arch }}" >> checksum-${{ matrix.arch }}.txt
+          echo "${{ steps.checksum.outputs.sha }}" > checksum-safechain-agent-${{ matrix.arch }}.txt
+          echo "${{ matrix.arch }}" >> checksum-safechain-agent-${{ matrix.arch }}.txt
 
       - name: Upload checksum metadata
         uses: actions/upload-artifact@v4
         with:
-          name: checksum-${{ matrix.arch }}
-          path: checksum-${{ matrix.arch }}.txt
+          name: checksum-safechain-agent-${{ matrix.arch }}
+          path: checksum-safechain-agent-${{ matrix.arch }}.txt
           retention-days: 30
 
   collect-checksums:
@@ -111,8 +111,8 @@ jobs:
       - name: Extract checksums
         id: extract
         run: |
-          AMD64_SHA=$(cat checksums/checksum-amd64/checksum-amd64.txt | head -n 1)
-          ARM64_SHA=$(cat checksums/checksum-arm64/checksum-arm64.txt | head -n 1)
+          AMD64_SHA=$(cat checksums/checksum-safechain-agent-amd64/checksum-safechain-agent-amd64.txt | head -n 1)
+          ARM64_SHA=$(cat checksums/checksum-safechain-agent-arm64/checksum-safechain-agent-arm64.txt | head -n 1)
           
           echo "amd64_sha=$AMD64_SHA" >> $GITHUB_OUTPUT
           echo "arm64_sha=$ARM64_SHA" >> $GITHUB_OUTPUT
