Add write permissions for contents in update-formula job

--- a/.github/workflows/build-brew-formula.yml
+++ b/.github/workflows/build-brew-formula.yml
@@ -63,6 +63,8 @@ jobs:
   update-formula:
     needs: [build-agent, extract-version]
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
