--- a/.github/workflows/build-agent.yml
+++ b/.github/workflows/build-agent.yml
@@ -53,9 +53,9 @@ jobs:
           BUILD_TIME=$(date -u '+%Y-%m-%d_%H:%M:%S')
           GIT_COMMIT=$(git rev-parse --short HEAD)
           
-          LDFLAGS="-X 'github.com/aikido/safechain-agent/cmd/daemon.version=$VERSION' \
-                   -X 'github.com/aikido/safechain-agent/cmd/daemon.buildTime=$BUILD_TIME' \
-                   -X 'github.com/aikido/safechain-agent/cmd/daemon.gitCommit=$GIT_COMMIT'"
+          LDFLAGS="-X 'github.com/aikido/sc-agent/cmd/daemon.version=$VERSION' \
+                   -X 'github.com/aikido/sc-agent/cmd/daemon.buildTime=$BUILD_TIME' \
+                   -X 'github.com/aikido/sc-agent/cmd/daemon.gitCommit=$GIT_COMMIT'"
           
           mkdir -p bin
           
@@ -63,21 +63,21 @@ jobs:
           CGO_ENABLED=0 GOOS=darwin GOARCH=${{ matrix.goarch }} go build \
             -ldflags "$LDFLAGS -s -w" \
             -trimpath \
-            -o bin/safechain-agent-darwin-${{ matrix.arch }} \
+            -o bin/sc-agent-darwin-${{ matrix.arch }} \
             ./cmd/daemon
 
       - name: Calculate binary checksum
         id: checksum
         run: |
-          SHA=$(shasum -a 256 bin/safechain-agent-darwin-${{ matrix.arch }} | cut -d' ' -f1)
+          SHA=$(shasum -a 256 bin/sc-agent-darwin-${{ matrix.arch }} | cut -d' ' -f1)
           echo "sha=$SHA" >> $GITHUB_OUTPUT
           echo "${{ matrix.arch }} SHA256: $SHA"
 
       - name: Upload binary artifact
         uses: actions/upload-artifact@v4
         with:
-          name: safechain-agent-darwin-${{ matrix.arch }}
-          path: bin/safechain-agent-darwin-${{ matrix.arch }}
+          name: sc-agent-darwin-${{ matrix.arch }}
+          path: bin/sc-agent-darwin-${{ matrix.arch }}
           retention-days: 30
 
       - name: Save checksum to file
@@ -105,8 +105,8 @@ jobs:
       - name: Prepare release files
         id: checksums
         run: |
-          mv artifacts/safechain-agent-darwin-amd64/safechain-agent-darwin-amd64 .
-          mv artifacts/safechain-agent-darwin-arm64/safechain-agent-darwin-arm64 .
+          mv artifacts/sc-agent-darwin-amd64/sc-agent-darwin-amd64 .
+          mv artifacts/sc-agent-darwin-arm64/sc-agent-darwin-arm64 .
           
           AMD64_SHA=$(cat artifacts/checksum-amd64/checksum-amd64.txt)
           ARM64_SHA=$(cat artifacts/checksum-arm64/checksum-arm64.txt)
@@ -118,16 +118,16 @@ jobs:
         uses: softprops/action-gh-release@v1
         with:
           files: |
-            safechain-agent-darwin-amd64
-            safechain-agent-darwin-arm64
+            sc-agent-darwin-amd64
+            sc-agent-darwin-arm64
           body: |
-            ## safechain-agent ${{ needs.extract-version.outputs.version }}
+            ## sc-agent ${{ needs.extract-version.outputs.version }}
             
             ### Installation
             
             ```bash
             brew tap AikidoSec/sc-agent
-            brew install safechain-agent
+            brew install sc-agent
             ```
             
             ### Checksums
