Add safe-chain binary handling and update platform configurations
- Added steps to copy the safe-chain executable to the bin directory in both build and release workflows.
- Updated platform configuration files to replace BinDir with SafeChainBinary for macOS, Linux, and Windows.
- Adjusted proxy and scanner implementations to use the new SafeChainBinary path for command execution.
- Modified Windows installer configuration to include the safe-chain executable as a component.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -125,6 +125,10 @@ jobs:
           go build -ldflags $LDFLAGS -trimpath -o bin/sc-agent.exe ./cmd/daemon
         shell: pwsh
 
+      - name: Copy safe-chain to bin
+        run: Copy-Item -Path "dist\safe-chain-windows-amd64.exe" -Destination "bin\safe-chain.exe"
+        shell: pwsh
+
       - name: Calculate binary checksum
         id: checksum
         run: |
